--- a/index.html
+++ b/index.html
@@ -7,61 +7,151 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="login-container">
-    <h2>เข้าสู่ระบบ</h2>
-    <form id="loginForm">
-      <div class="input-group">
-        <label for="id">รหัสผู้ใช้ (ID)</label>
-        <input type="text" id="id" name="id" required>
+  <header>
+    <div class="logo">logo</div>
+    <h1>ระบบตรวจสอบครุภัณฑ์</h1>
+    <div class="header-actions">
+      <input type="text" id="searchInput" placeholder="ค้นหา..." class="search-input" />
+      <a href="login.html" class="login-btn">LOGIN</a>
+    </div>
+  </header>
+
+  <main>
+    <section class="table-section">
+      <div class="table-header">
+        <h2>รายการครุภัณฑ์</h2>
+        <button id="sortBtn" class="sort-btn">↑↓ สลับการเรียง</button>
       </div>
-      <div class="input-group">
-        <label for="pass">รหัสผ่าน (Password)</label>
-        <input type="password" id="pass" name="pass" required>
-      </div>
-      <button type="submit" class="btn">เข้าสู่ระบบ</button>
-    </form>
-    <p id="status"></p>
+
+      <table id="equipmentTable">
+        <thead>
+          <tr>
+            <th>รหัสครุภัณฑ์</th>
+            <th>ชื่อ</th>
+            <th>ที่อยู่</th>
+            <th>Status</th>
+            <th>ดูรายละเอียด</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- ข้อมูลจาก Google Sheet จะถูกเพิ่มที่นี่ -->
+        </tbody>
+      </table>
+    </section>
+  </main>
+
+  <!-- Modal -->
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <div id="modalDetails"></div>
+    </div>
   </div>
 
   <script>
-    document.getElementById("loginForm").addEventListener("submit", async function(e) {
-      e.preventDefault();
+    // 🔹 ตั้งค่าข้อมูล Google Sheet
+    const sheetID = "1bkpz-iG4B8qnvZc4ql4qE15Qw8HrIZ1aeX1vZQzMFy0";
+    const sheetName = "SHOW";
+    const baseURL = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}&t=${Date.now()}`;
 
-      const id = document.getElementById("id").value.trim();
-      const pass = document.getElementById("pass").value.trim();
-      const status = document.getElementById("status");
+    const tableBody = document.querySelector("#equipmentTable tbody");
+    const searchInput = document.getElementById("searchInput");
+    const modal = document.getElementById("modal");
+    const closeModal = document.getElementById("closeModal");
+    const modalDetails = document.getElementById("modalDetails");
+    const sortBtn = document.getElementById("sortBtn");
 
-      status.textContent = "กำลังตรวจสอบข้อมูล...";
+    let data = [];
+    let ascending = true;
 
+    // 🔹 โหลดข้อมูลจาก Google Sheet
+    async function loadEquipment() {
       try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbz0-MZmsHHyQFQj7gRZBEXAMPLE/exec");
-        const data = await response.json();
+        const res = await fetch(baseURL);
+        const text = await res.text();
 
-        console.log("Login Data จาก Google Sheet:", data);
-
-        // 🔹 ใช้โครงสร้างตามเดิมที่เคยใช้งานได้
-        const foundUser = data.find(r =>
-          r.c[0]?.v?.toString().trim() === id &&
-          r.c[1]?.v?.toString().trim() === pass
-        );
-
-        if (foundUser) {
-          status.textContent = "✅ เข้าสู่ระบบสำเร็จ";
-          status.style.color = "#00cc66";
-
-          setTimeout(() => {
-            window.location.href = "index.html";
-          }, 1000);
-        } else {
-          status.textContent = "❌ รหัสผู้ใช้หรือรหัสผ่านไม่ถูกต้อง";
-          status.style.color = "red";
+        // ตรวจสอบว่าได้ข้อมูลจริงไหม
+        if (!text.startsWith("/*O_o*/")) {
+          throw new Error("ข้อมูลจาก Google Sheet ไม่ถูกต้องหรือยังไม่ได้เผยแพร่");
         }
+
+        const json = JSON.parse(text.substring(47).slice(0, -2));
+
+        data = json.table.rows.map(r => ({
+          number: r.c[0]?.v || "",
+          code: r.c[1]?.v || "",
+          name: r.c[2]?.v || "",
+          location: r.c[3]?.v || "",
+          status: r.c[4]?.v || "",
+          details: r.c[5]?.v || ""
+        }));
+
+        renderTable();
+        console.log("✅ โหลดข้อมูลสำเร็จ:", data.length, "แถว");
       } catch (error) {
-        console.error("เกิดข้อผิดพลาด:", error);
-        status.textContent = "⚠️ ไม่สามารถเชื่อมต่อข้อมูลได้";
-        status.style.color = "orange";
+        console.error("❌ โหลดข้อมูลไม่สำเร็จ:", error);
+        tableBody.innerHTML = `<tr><td colspan="5" style="color:red;">ไม่สามารถโหลดข้อมูลได้ กรุณาตรวจสอบการเผยแพร่ Google Sheet</td></tr>`;
       }
+    }
+
+    // 🔹 แสดงข้อมูลในตาราง
+    function renderTable(filteredData = data) {
+      filteredData.sort((a, b) =>
+        ascending ? a.number - b.number : b.number - a.number
+      );
+
+      tableBody.innerHTML = filteredData
+        .map(e => `
+          <tr>
+            <td>${e.code}</td>
+            <td>${e.name}</td>
+            <td>${e.location}</td>
+            <td>${e.status}</td>
+            <td><button class="detail-btn">ดูเพิ่มเติม</button></td>
+          </tr>
+        `)
+        .join("");
+
+      document.querySelectorAll(".detail-btn").forEach((btn, i) => {
+        btn.addEventListener("click", () => {
+          modalDetails.innerHTML = `
+            <h3>${filteredData[i].name}</h3>
+            <p><strong>รหัส:</strong> ${filteredData[i].code}</p>
+            <p><strong>ที่อยู่:</strong> ${filteredData[i].location}</p>
+            <p><strong>สถานะ:</strong> ${filteredData[i].status}</p>
+            <p>${filteredData[i].details || ""}</p>
+          `;
+          modal.style.display = "block";
+        });
+      });
+    }
+
+    // 🔹 ปิด Modal
+    closeModal.onclick = () => (modal.style.display = "none");
+    window.onclick = e => {
+      if (e.target == modal) modal.style.display = "none";
+    };
+
+    // 🔹 ปุ่มสลับการเรียง ↑↓
+    sortBtn.addEventListener("click", () => {
+      ascending = !ascending;
+      renderTable();
     });
+
+    // 🔹 ค้นหา
+    searchInput.addEventListener("input", e => {
+      const keyword = e.target.value.toLowerCase();
+      const filtered = data.filter(item =>
+        item.code.toLowerCase().includes(keyword) ||
+        item.name.toLowerCase().includes(keyword) ||
+        item.location.toLowerCase().includes(keyword) ||
+        item.status.toLowerCase().includes(keyword)
+      );
+      renderTable(filtered);
+    });
+
+    // ✅ เรียกโหลดข้อมูลเมื่อเปิดหน้า
+    loadEquipment();
   </script>
 </body>
 </html>
