Add hidden form section in admin dashboard
Added a hidden form section for displaying content.

--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -27,6 +27,15 @@
     <div class="card" onclick="openForm('user')">👥 จัดการสมาชิก</div>
   </main>
 
+    <!-- ฟอร์มแสดงผล -->
+  <section id="form-section" class="hidden">
+    <div class="form-box">
+      <span class="close-btn" onclick="closeForm()">×</span>
+      <h2 id="form-title">ฟอร์ม</h2>
+      <div id="form-content"></div>
+    </div>
+  </section>
+  
   <script>
     // โหลดชื่อผู้ใช้จาก localStorage
     document.getElementById("username").textContent = localStorage.getItem("username") || "Admin";
